[gd_scene load_steps=4 format=3 uid="uid://q4wkq2sg7d8s"]

[ext_resource type="Script" path="res://scenes/enemies/robot_bosses/heat_wave.gd" id="1_soc6t"]
[ext_resource type="Script" path="res://scripts/components/hit_box_component.gd" id="2_kjh15"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l1lly"]

[node name="HeatWave" type="Node2D"]
script = ExtResource("1_soc6t")
radius = 100.0

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 16
script = ExtResource("2_kjh15")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("CircleShape2D_l1lly")

[node name="ChargingTimer" type="Timer" parent="."]
one_shot = true

[node name="HeatWaveTimer" type="Timer" parent="."]
one_shot = true
